# 26-wuren-chenyueyi

./: CMakeLists.txt  README.md  dot-bashrc-backup-20250715  task.sh
bicycle_project/: LQR笔记.docx  bicycle_model.slxc  runmodel.m
bicycle_project/model/: bicycle_model.slx
bicycle_project/scripts/: control_bonus.m  visualization.m
bicycle_project/slprj/sim/varcache/bicycle_model/: checksumOfCache.mat  varInfo.mat
bicycle_project/slprj/sim/varcache/bicycle_model/tmwinternal/: simulink_cache.xml
cpp/src/cone_project/: CMakeLists.txt  package.xml
cpp/src/cone_project/config/: rviz.rviz
cpp/src/cone_project/launch/: cone_projection.launch
cpp/src/cone_project/src/: cone_projection_node.cpp
cpp/src/pointcloud_processing/: CMakeLists.txt  default.rviz  package.xml
cpp/src/pointcloud_processing/src/: pointcloud_processing.cpp
devel/: .catkin
devel/include/package2/: TurtleVel.h
devel/lib/package2/: turtle_controller_node
devel/lib/pkgconfig/: fsd_common_msgs.pc  package2.pc
devel/lib/python3/dist-packages/package2/msg/: _TurtleVel.py  __init__.py
devel/share/common-lisp/ros/package2/msg/: TurtleVel.lisp  _package.lisp  _package_TurtleVel.lisp  package2-msg.asd
devel/share/fsd_common_msgs/cmake/: fsd_common_msgs-msg-paths.cmake  fsd_common_msgsConfig.cmake
devel/share/gennodejs/ros/fsd_common_msgs/msg/: CarState.js  Cone.js  _index.js
devel/share/gennodejs/ros/package2/msg/: TurtleVel.js  _index.js
devel/share/package2/cmake/: package2-msg-paths.cmake  package2Config.cmake
devel/share/roseus/ros/fsd_common_msgs/: manifest.l
devel/share/roseus/ros/package2/: manifest.l
devel/share/roseus/ros/package2/msg/: TurtleVel.l
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
logs/cpp_training/: build.cmake.000.log.stderr
logs/fsd_common_msgs/: build.cmake.000.log.stderr
modules/A1/: CMakeLists.txt
modules/A2/: CMakeLists.txt
modules/M1/: CMakeLists.txt
modules/M2/: CMakeLists.txt
src/cone_sim/: CMakeLists.txt  package.xml
src/cone_sim/urdf/: cone.urdf
src/fsd_common_msgs/: CMakeLists.txt
src/fsd_common_msgs/bag/: lidar_cone_side_&_slam_state.orig.bag
src/launch/: spawn_cone.launch
src/package2/: CMakeLists.txt  package.xml
src/package2/config/: params.yaml
src/package2/launch/: control.launch
src/package2/msg/: TurtleVel.msg
src/package2/scripts/: cone_counter.py
src/package2/src/: turtle_controller.cpp
