<?xml version="1.0"?>
<package format="2">
  <name>package2</name>
  <version>0.0.0</version>
  <description>The package2 package</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>fsd_common_msgs</exec_depend>
<exec_depend>rospy</exec_depend>
</package>
