<?xml version="1.0"?>
<package format="2">
  <name>cone_project</name>
  <version>0.0.0</version>
  <description>The cone_project package</description>

  <maintainer email="1411952270@qq.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>fsd_common_msgs</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>opencv2</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>fsd_common_msgs</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>opencv2</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
    